--- a/minimal-v1.yaml
+++ b/minimal-v1.yaml
@@ -18,12 +18,14 @@ consumes:
 paths:
   /:
     put:
+      consumes:
+        - multipart/form-data
       parameters:
         - name: deletekey
           in: query
-          description: Key that makes it possible to delete this file.
+          description: Key that makes it possible to delete this file. If no key is provided, the file is not deletable.
           type: string
-        - name: expires
+        - name: expiry
           in: query
           description: Date-time of automatic deletion by the server. Try to parse as ISO 8601, if that doesn't work, parse as UNIX time (UTC), see Python/calendar.timegm.
           type: string
@@ -33,8 +35,12 @@ paths:
           description: Hushfile created
         400:
           description: Bad request. Schema not satisfied.
+          schema:
+            $ref: '#/definitions/Error'
         default:
           description: Internal server error, maybe it misconfigured.
+          schema:
+            $ref: '#/definitions/Error'
   /{id}:
     parameters:
       - name: id
@@ -42,6 +48,16 @@ paths:
         description: ID of the file.
         required: true
         type: string
+    head:
+      description:
+        Fetch length of hushfile.
+      responses:
+        200:
+          description: The header "Content-Length" has the length in octets.
+        404:
+          description: ID not found.
+          schema:
+            $ref: '#/definitions/Error'
     get:
       description: |
         Returns the bytes of a hushfiles.
@@ -49,11 +65,9 @@ paths:
         - application/octet-stream
       responses:
         200:
-          description: An array of products
+          description: Bytes of the hushfile.
         404:
           description: ID not found.
-        default:
-          description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
     delete:
@@ -66,17 +80,38 @@ paths:
           description: A deletekey is needed and yours was wrong.
         404:
           description: ID not found.
-        default:
-          description: Server error.
+          schema:
+            $ref: '#/definitions/Error'
+  /merge:
+    post:
+      description:
+        Merges one or more hushfiles.
+        
+        The result is a hushfile which simply contains the bytes of all hushfiles, concatenated.
+        
+        The source hushfiles will still be available (until their eventual expiry).
+      parameters:
+      - name: id
+        in: formData
+        description: IDs of hushfiles to use
+        required: true
+        type: array
+        minItems: 1
+        items:
+          type: string
+        collectionFormat: csv
+      responses:
+        201:
+          description: Hushfile created.
+        400:
+          description: One or more source ID's invalid.
+          schema:
+            $ref: '#/definitions/Error'
+      
 definitions:
   Error:
+    type: "object"
+    required: ["message"]
     properties:
-      code:
-        type: integer
-        format: int32
-        minimum: 100
-        maximum: 600
       message:
-        type: string
-      fields:
         type: string
